deploy/deploy-me.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-me
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-me
  template:
    metadata:
      labels:
        app: app-me
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
